Semester10-F/BTP500/labs/lab4/error.txt
lab4.h: In instantiation of 'Sentinel<T>::Sentinel() [with T = int]':
lab4tester.cpp:15:16:   required from here
lab4.h:168:9: error: call to 'Sentinel<T>::Node::Node(const T&, Sentinel<T>::Node*, Sentinel<T>::Node*) [with T = int]' uses the default argument for parameter 2, which is not yet defined
   front_=new Node();
         ^
lab4.h:168:9: error: call to 'Sentinel<T>::Node::Node(const T&, Sentinel<T>::Node*, Sentinel<T>::Node*) [with T = int]' uses the default argument for parameter 3, which is not yet defined
lab4.h:169:8: error: call to 'Sentinel<T>::Node::Node(const T&, Sentinel<T>::Node*, Sentinel<T>::Node*) [with T = int]' uses the default argument for parameter 2, which is not yet defined
   back_=new Node();
        ^
lab4.h:169:8: error: call to 'Sentinel<T>::Node::Node(const T&, Sentinel<T>::Node*, Sentinel<T>::Node*) [with T = int]' uses the default argument for parameter 3, which is not yet defined
lab4.h: In instantiation of 'void DList<T>::push_front(const T&) [with T = int]':
lab4tester.cpp:37:23:   required from here
lab4.h:137:31: error: call to 'DList<T>::Node::Node(const T&, DList<T>::Node*, DList<T>::Node*) [with T = int]' uses the default argument for parameter 3, which is not yet defined
  Node* nn=new Node(data,front_);
                               ^
lab4.h:19:22: warning: extended initializer lists only available with -std=c++11 or -std=gnu++11 [enabled by default]
   Node(const T& data=T{},Node* next=nullptr, Node* prev=nullptr){
                      ^
lab4.h:19:37: error: 'nullptr' was not declared in this scope
   Node(const T& data=T{},Node* next=nullptr, Node* prev=nullptr){
                                     ^
lab4.h:19:57: error: 'nullptr' was not declared in this scope
   Node(const T& data=T{},Node* next=nullptr, Node* prev=nullptr){
                                                         ^
lab4.h: In constructor 'DList<T>::DList()':
lab4.h:29:12: error: 'nullptr' was not declared in this scope
   front_ = nullptr;
            ^
lab4.h: In constructor 'DList<T>::const_iterator::const_iterator()':
lab4.h:45:12: error: 'nullptr' was not declared in this scope
    curr_ = nullptr;
            ^
lab4.h: In member function 'DList<T>::const_iterator DList<T>::cend() const':
lab4.h:127:32: error: 'nullptr' was not declared in this scope
          return const_iterator(nullptr, this);
                                ^
lab4.h: In member function 'DList<T>::iterator DList<T>::end()':
lab4.h:130:26: error: 'nullptr' was not declared in this scope
          return iterator(nullptr, this);
                          ^
lab4.h: In member function 'void DList<T>::push_front(const T&)':
lab4.h:138:13: error: 'nullptr' was not declared in this scope
  if(front_!=nullptr)
             ^
lab4.h: At global scope:
lab4.h:158:22: warning: extended initializer lists only available with -std=c++11 or -std=gnu++11 [enabled by default]
   Node(const T& data=T{},Node* next=nullptr, Node* prev=nullptr){
                      ^
lab4.h:158:37: error: 'nullptr' was not declared in this scope
   Node(const T& data=T{},Node* next=nullptr, Node* prev=nullptr){
                                     ^
lab4.h:158:57: error: 'nullptr' was not declared in this scope
   Node(const T& data=T{},Node* next=nullptr, Node* prev=nullptr){
                                                         ^
lab4.h: In constructor 'Sentinel<T>::const_iterator::const_iterator()':
lab4.h:184:12: error: 'nullptr' was not declared in this scope
    curr_ = nullptr;
            ^
